[workspace]
members = [".", "xdp-module", "packet-generator"]

[package]
name = "firewall"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
libc = "0.2"
tokio = { version = "0.2", features = ["signal", "time", "rt-core", "macros", "net", "stream", "sync", "io-util"] }
redbpf = { version = "1.2", features = ["load"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

xdp-module = { path = "xdp-module" }

crypto = { tag = "v0.5.0", git = "https://github.com/simplestaking/tezedge" }

[build-dependencies]
cargo-bpf = { version = "1.2", default-features = false, features = ["build"] }
