[workspace]
members = [".", "packet-generator", "tezedge-firewall"]

[package]
name = "tezedge-firewall-command"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["signal", "time", "rt-core", "macros", "net", "stream", "sync", "io-util"] }
tokio-util = { version = "0.3", features = ["codec"] }
bytes = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
lazy_static = { version = "1.4" }
hex = "0.4"

tezos_encoding = { tag = "v0.6.0", git = "https://github.com/simplestaking/tezedge" }
