[package]
name = "tezedge-firewall"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[[bin]]
name = "fw"
path = "src/bin/client.rs"

[[bin]]
name = "packet-generator"
path = "src/bin/packet-generator.rs"

[dependencies]
structopt = { version = "0.3" }
libc = { version = "0.2" }
tokio = { version = "0.2", features = ["signal", "time", "rt-core", "macros", "net", "stream", "sync", "io-util"] }
tokio-util = { version = "0.3", features = ["codec"] }
#redbpf = { path = "../redbpf/redbpf", features = ["load"] }
redbpf = { version = "1.2", features = ["load"] }
slog = { version = "2.7" }
slog-async = { version = "2.5" }
slog-term = { version = "2.6" }
hex = { version = "0.4" }
rand = { version = "0.7" }

crypto = { tag = "v0.7.0", git = "https://github.com/simplestaking/tezedge" }
tezos_messages = { tag = "v0.7.0", git = "https://github.com/simplestaking/tezedge" }
tezos-conversation = { branch = "develop", git = "https://github.com/simplestaking/tezos-dissector" }

tezedge-firewall-command = { path = ".." }
xdp-module = { path = "xdp-module" }

[build-dependencies]
#cargo-bpf = { path = "../redbpf/cargo-bpf", default-features = false, features = ["build"] }
cargo-bpf = { version = "1.2", default-features = false, features = ["build"] }
