[package]
name = "xdp-module"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[[bin]]
name = "xdp_module"
path = "src/bin/main.rs"
required-features = ["probes"]

[dependencies]
redbpf-macros = { path = "../redbpf/redbpf-macros", default-features = false }
redbpf-probes = { path = "../redbpf/redbpf-probes", default-features = false }
bitflags = "1.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[build-dependencies]
cargo-bpf = { path = "../redbpf/cargo-bpf", default-features = false, features = ["bindings"] }

[features]
probes = []
