[package]
name = "xdp-module"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[[bin]]
name = "xdp_module"
path = "src/bin/main.rs"
required-features = ["probes"]

[dependencies]
redbpf-macros = { version = "1.2", default-features = false }
redbpf-probes = { version = "1.2", default-features = false }
bitflags = "1.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[build-dependencies]
cargo-bpf = { version = "1.2", default-features = false, features = ["bindings"] }

[features]
probes = []
