[package]
name = "xdp-module"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[[bin]]
name = "xdp_module"
path = "src/bin/main.rs"
required-features = ["probes"]

[build-dependencies]
cargo-bpf = { version = "1.3", default-features = false, features = ["bindings"] }

[dependencies]
redbpf-macros = { version = "1.3", default-features = false }
redbpf-probes = { version = "1.3", default-features = false }
bitflags = { version = "1.2" }

[features]
probes = []
